<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".MainActivity">

	<TextView
		android:id="@+id/label_home"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="Home"
		android:textSize="36sp"
		android:textStyle="bold"
		app:layout_constraintBottom_toTopOf="@+id/txt_home_score"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/label_away"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="Away"
		android:textSize="36sp"
		android:textStyle="bold"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/txt_away_score" />

	<TextView
		android:id="@+id/txt_home_score"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="20dp"
		android:text="0"
		android:textSize="72sp"
		app:layout_constraintBottom_toTopOf="@+id/btn_reset"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/txt_away_score"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="0"
		android:textSize="72sp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/btn_reset" />

	<Button
		android:id="@+id/btn_increase_home"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="24dp"
		android:layout_marginEnd="24dp"
		android:text="+1"
		android:textStyle="bold"
		app:layout_constraintBottom_toTopOf="@+id/btn_reset"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/txt_home_score"
		app:layout_constraintTop_toTopOf="parent" />

	<Button
		android:id="@+id/btn_decrease_home"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="24dp"
		android:layout_marginEnd="24dp"
		android:text="-1"
		android:textStyle="bold"
		app:layout_constraintBottom_toTopOf="@+id/btn_reset"
		app:layout_constraintEnd_toStartOf="@+id/txt_home_score"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<Button
		android:id="@+id/btn_increase_away"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="24dp"
		android:layout_marginEnd="24dp"
		android:text="+1"
		android:textStyle="bold"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/txt_away_score"
		app:layout_constraintTop_toBottomOf="@+id/btn_reset" />

	<Button
		android:id="@+id/btn_decrease_away"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="24dp"
		android:layout_marginEnd="24dp"
		android:text="-1"
		android:textStyle="bold"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toStartOf="@+id/txt_away_score"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/btn_reset" />

	<Button
		android:id="@+id/btn_reset"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="24dp"
		android:layout_marginEnd="24dp"
		android:text="Reset"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>